[tool.poetry]
name = "ubc-solar-data-tools"
description = "UBC Solar's data analysis and querying tools"
authors = ["Joshua Riefman <joshuariefman@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "data_tools" }
]
dynamic = ["version"]

[tool.poetry.dependencies]
python = "^3.11"
influxdb-client = "^1.45.0"
python-dotenv = "^1.0.1"
numpy = "^2.0.1"
pandas = "^2.2.2"
matplotlib = "^3.9.2"

[tool.poetry.group.dev.dependencies]
poetry-dynamic-versioning = "^1.4.1"

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
